--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "tugazuca",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "tsx watch ./index.ts | pino-pretty"
   },
   "keywords": [],
   "author": "",
@@ -20,10 +21,11 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/pino-pretty": "^4.7.5",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
+    "pino-pretty": "^13.0.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
 }
