--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch ./index.ts | pino-pretty"
+    "dev": "tsx watch src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +21,8 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
-    "@types/pino-pretty": "^4.7.5",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
-    "pino-pretty": "^13.0.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
